--- a/src/main.css
+++ b/src/main.css
@@ -8,3 +8,4 @@
 @import "./components/code.css";
 @import "./components/search.css";
 @import "./components/toc.css";
+@import "./components/pagination.css";
