--- a/main.css
+++ b/main.css
@@ -5,7 +5,9 @@
 @import "./components/badge.css";
 @import "./components/body.css";
 @import "./components/breadcrumb.css";
+@import "./components/button.css";
 @import "./components/code.css";
+@import "./components/empty-state.css";
 @import "./components/search.css";
 @import "./components/toc.css";
 @import "./components/pagination.css";
