--- a/variables.css
+++ b/variables.css
@@ -10,13 +10,18 @@
   --color-background: hsl(220, 20%, 100%);
   --color-highlight: hsl(220, 20%, 95%);
 
+  /* Brand colors */
+  --color-primary: hsl(0deg, 50%, 50%);
+  --color-primary-highlight: hsl(0deg, 50%, 40%);
+
   --code-text: var(--color-base);
   --code-comment: slategray;
-  --code-token-1: #905;
-  --code-token-2: #690;
-  --code-token-2: #07a;
-  --code-inserted: #690;
-  --code-deleted: #905;
+  --code-token-1: hsl(330, 90%, 30%);
+  --code-token-2: hsl(20, 90%, 30%);
+  --code-token-3: hsl(198, 90%, 30%);
+  --code-token-4: hsl(100, 90%, 30%);
+  --code-inserted: hsl(80, 90%, 30%);
+  --code-deleted: hsl(327, 90%, 30%);
   --code-border: var(--color-line);
   --code-background: var(--color-highlight);
   --code-background-selection: #b3d4fc;
@@ -52,7 +57,7 @@
   --pagefind-ui-scale: .8;
   --pagefind-ui-primary: var(--color-text);
   --pagefind-ui-text: var(--color-text);
-  --pagefind-ui-background: var(--color-background);
+  --pagefind-ui-background: var(--color-highlight);
   --pagefind-ui-border: var(--color-line);
   --pagefind-ui-tag: var(--color-highlight);
   --pagefind-ui-border-width: 1px;
@@ -85,13 +90,13 @@
     --color-highlight: hsl(220, 20%, 15%);
 
     --code-text: var(--color-base);
-    --code-comment: hsl(0,0,47%);
-    --code-token-1: hsl(53,89%,79%);
-    --code-token-2: hsl(14,58%,55%);
-    --code-token-3: hsl(76,21%,52%);
-    --code-token-4: hsl(42,75%,65%);
-    --code-inserted: hsl(76,21%,52%);
-    --code-deleted: hsl(14,58%,55%);
+    --code-comment: hsl(0, 0, 50%);
+    --code-token-1: hsl(50, 90%, 80%);
+    --code-token-2: hsl(15, 60%, 60%);
+    --code-token-3: hsl(75, 20%, 50%);
+    --code-token-4: hsl(40, 75%, 65%);
+    --code-inserted: hsl(75, 20%, 50%);
+    --code-deleted: hsl(15, 60%, 55%);
     --code-border: var(--color-line);
     --code-background: var(--color-highlight);
     --code-background-selection: hsla(0,0,93%,0.15);
