--- a/components/search.css
+++ b/components/search.css
@@ -9,8 +9,8 @@
     }
 
     &:focus {
-      box-shadow: 0 1px 5px rgba(0,0,0,0.2);
-      border-color: var(--color-dim);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+      background: var(--color-background);
       outline: 0;
     }
   }
