--- a/fonts.css
+++ b/fonts.css
@@ -1,25 +1,1 @@
-@font-face {
-  font-family: 'Epilogue';
-  font-weight: 700;
-  font-display: swap;
-  font-style: normal;
-  src: url("./fonts/epilogue-bold.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: 'Inter';
-  font-weight: 100 900;
-  font-display: swap;
-  font-style: normal;
-  font-named-instance: 'Regular';
-  src: url("./fonts/inter.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: 'Inter';
-  font-weight: 100 900;
-  font-display: swap;
-  font-style: italic;
-  font-named-instance: 'Italic';
-  src: url("./fonts/inter-italic.woff2") format("woff2");
-}
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@700&family=Inter:wght@400;700&display=swap');
