--- a/src/components/pagination.css
+++ b/src/components/pagination.css
@@ -3,7 +3,6 @@
     list-style: none;
     padding: 0;
     display: flex;
-    flex-wrap: wrap;
     column-gap: 2rem;
     justify-content: space-between;
   }
@@ -25,10 +24,11 @@
 }
 
 .pagination-prev {
-  text-align: right;
+  text-align: left;
 }
 
 .pagination-next {
+  text-align: right;
   margin-left: auto;
 }
 
