--- a/src/components/pagination.css
+++ b/src/components/pagination.css
@@ -2,9 +2,9 @@
   & ul {
     list-style: none;
     padding: 0;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     column-gap: 2rem;
-    justify-content: space-between;
   }
 
   & a {
@@ -25,11 +25,17 @@
 
 .pagination-prev {
   text-align: left;
+  grid-column: 1;
+}
+
+.pagination-page {
+  text-align: center;
+  grid-column: 2;
 }
 
 .pagination-next {
   text-align: right;
-  margin-left: auto;
+  grid-column: 3;
 }
 
 @media only screen and (max-width: 576px){
