--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,4 @@
-@import "../node_modules/ui-normalize/ui-normalize.css";
+@import "./ui-normalize.css";
 
 @import "./fonts.css";
 @import "./variables.css";
