--- a/src/main.css
+++ b/src/main.css
@@ -13,3 +13,4 @@
 @import "./components/search.css";
 @import "./components/toc.css";
 @import "./components/pagination.css";
+@import "./components/footnotes.css";
