--- a/src/variables.css
+++ b/src/variables.css
@@ -30,7 +30,7 @@
   /* Fonts */
   --font-family-code: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
   --font-family-ui: -apple-system, system-ui, sans-serif;
-  --font-family-display: Epilogue, var(--font-family-ui);
+  --font-family-display: var(--font-family-ui);
 
   --font-code: .9em/1.5 var(--font-family-code);
   --font-display: bold clamp(2rem, 10vw, 4rem)/1 var(--font-family-display);
