fixed long links

--- a/src/reset.css
+++ b/src/reset.css
@@ -8,6 +8,7 @@ body {
   font: var(--font-ui);
   color: var(--color-base);
   background-color: var(--color-background);
+  overflow-wrap: break-word;
 }
 
 main {
