feat: add styling to <blockquote> element

--- a/src/main.css
+++ b/src/main.css
@@ -6,6 +6,7 @@
 
 @import "./components/badge.css";
 @import "./components/body.css";
+@import "./components/blockquote.css";
 @import "./components/breadcrumb.css";
 @import "./components/button.css";
 @import "./components/code.css";
