--- a/src/components/pagination.css
+++ b/src/components/pagination.css
@@ -3,8 +3,12 @@
     list-style: none;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     column-gap: 2rem;
+
+    &:has(.pagination-page) {
+      grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
+    }
   }
 
   & a {
@@ -35,7 +39,7 @@
 
 .pagination-next {
   text-align: right;
-  grid-column: 3;
+  grid-column: -2;
 }
 
 @media only screen and (max-width: 576px){
