--- a/src/variables.css
+++ b/src/variables.css
@@ -1,14 +1,14 @@
 :root {
   /* Light colors */
   color-scheme: light;
-  --color-base: hsl(220, 20%, 10%);
+  --color-base: hsl(220, 20%, 5%);
   --color-text: hsl(220, 20%, 20%);
   --color-dim: hsl(220, 20%, 40%);
   --color-link: var(--color-primary);
   --color-link-hover: var(--color-primary-highlight);
   --color-line: hsl(220, 20%, 90%);
   --color-background: hsl(220, 20%, 100%);
-  --color-highlight: hsl(220, 20%, 96%);
+  --color-highlight: hsl(220, 20%, 97%);
 
   /* Brand colors */
   --color-primary: hsl(0deg, 50%, 50%);
@@ -17,10 +17,10 @@
   /* Code colors */
   --code-text: var(--color-base);
   --code-comment: slategray;
-  --code-token-1: hsl(330, 90%, 30%);
-  --code-token-2: hsl(20, 90%, 30%);
-  --code-token-3: hsl(198, 90%, 30%);
-  --code-token-4: hsl(100, 90%, 30%);
+  --code-token-1: hsl(0, 90%, 35%);
+  --code-token-2: hsl(300, 100%, 30%);
+  --code-token-3: hsl(210, 100%, 40%);
+  --code-token-4: hsl(140, 100%, 25%);
   --code-inserted: hsl(80, 90%, 30%);
   --code-deleted: hsl(327, 90%, 30%);
   --code-border: var(--color-line);
@@ -31,19 +31,20 @@
   --font-family-code: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
   --font-family-ui: -apple-system, system-ui, sans-serif;
   --font-family-display: var(--font-family-ui);
+  --font-bold: 600;
 
   --font-code: .9em/1.5 var(--font-family-code);
-  --font-display: bold clamp(2rem, 10vw, 4rem)/1 var(--font-family-display);
+  --font-display: var(--font-bold) clamp(2rem, 10vw, 4rem)/1 var(--font-family-display);
   --font-display-spacing: -0.02em;
-  --font-title: bold clamp(1.5rem, 8vw, 2rem)/1.2 var(--font-family-ui);
+  --font-title: var(--font-bold) clamp(1.5rem, 8vw, 2rem)/1.2 var(--font-family-ui);
   --font-title-spacing: -0.015em;
   --font-body: clamp(1rem, 5vw, 1.125rem)/1.6 var(--font-family-ui);
-  --font-body-bold: bold var(--font-body);
+  --font-body-bold: var(--font-bold) var(--font-body);
   --font-body-spacing: 0;
   --font-ui: 1rem/1.4 var(--font-family-ui);
-  --font-ui-bold: bold var(--font-ui);
-  --font-small: 0.85rem/1.4 var(--font-family-ui);
-  --font-small-bold: bold var(--font-small);
+  --font-ui-bold: var(--font-bold) var(--font-ui);
+  --font-small: clamp(0.85rem, 4vw, 0.9rem)/1.4 var(--font-family-ui);
+  --font-small-bold: var(--font-bold) var(--font-small);
 
   /* Space */
   --row-gap-xsmall: 1rem;
@@ -68,41 +69,29 @@
   --pagefind-ui-font: var(--font-family-ui);
 }
 
-/* Support for variable fonts */
-@supports (font-variation-settings: normal) {
-  :root {
-    --font-family-ui: Inter, -apple-system, system-ui, sans-serif;
-    --font-display-spacing: -0.035em;
-    --font-title-spacing: -0.025em;
-    --font-body-spacing: -0.015em;
-  }
-}
-
 /* Dark colors */
-@media (prefers-color-scheme: dark) {
-  :root {
-    color-scheme: dark;
-    --color-base: hsl(220, 20%, 100%);
-    --color-text: hsl(220, 20%, 80%);
-    --color-dim: hsl(220, 20%, 60%);
-    
-    --color-line: hsl(220, 20%, 20%);
-    --color-background: hsl(220, 20%, 10%);
-    --color-highlight: hsl(220, 20%, 15%);
+[data-theme="dark"] {
+  color-scheme: dark;
+  --color-base: hsl(220, 20%, 100%);
+  --color-text: hsl(220, 20%, 70%);
+  --color-dim: hsl(220, 20%, 50%);
+  
+  --color-line: hsl(220, 20%, 20%);
+  --color-background: hsl(220, 20%, 10%);
+  --color-highlight: hsl(220, 20%, 15%);
 
-    --color-primary: hsl(0deg, 88%, 65%);
-    --color-primary-highlight: hsl(0deg, 88%, 70%);
+  --color-primary: hsl(0deg, 88%, 65%);
+  --color-primary-highlight: hsl(0deg, 88%, 70%);
 
-    --code-text: var(--color-base);
-    --code-comment: hsl(0, 0%, 50%);
-    --code-token-1: hsl(50, 90%, 80%);
-    --code-token-2: hsl(15, 60%, 60%);
-    --code-token-3: hsl(75, 20%, 50%);
-    --code-token-4: hsl(40, 75%, 65%);
-    --code-inserted: hsl(75, 20%, 50%);
-    --code-deleted: hsl(15, 60%, 55%);
-    --code-border: var(--color-line);
-    --code-background: var(--color-highlight);
-    --code-background-selection: hsla(0,0%,93%,0.15);
-  }
+  --code-text: var(--color-base);
+  --code-comment: hsl(0, 0%, 50%);
+  --code-token-1: hsl(0, 100%, 70%);
+  --code-token-2: hsl(300, 60%, 60%);
+  --code-token-3: hsl(210, 80%, 70%);
+  --code-token-4: hsl(140, 70%, 60%);
+  --code-inserted: hsl(75, 20%, 50%);
+  --code-deleted: hsl(15, 60%, 55%);
+  --code-border: var(--color-line);
+  --code-background: var(--color-highlight);
+  --code-background-selection: hsla(0,0%,93%,0.15);
 }
