--- a/src/components/button.css
+++ b/src/components/button.css
@@ -7,6 +7,22 @@
   transition-property: background-color, color;
   transition-duration: var(--animation-duration);
   flex: 0 0 auto;
+  display: inline-flex;
+  column-gap: .5em;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: .6em;
+  min-height: 2.5em;
+  text-decoration: none;
+  cursor: pointer;
+
+  &:disabled,
+  &[aria-disabled="true"] {
+    cursor: default;
+    opacity: .33;
+    pointer-events: none;
+  }
 
   &.is-small {
     font: var(--font-small);
