--- a/src/components/body.css
+++ b/src/components/body.css
@@ -34,6 +34,23 @@
     color: var(--color-base);
   }
 
+  /** Tables */
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 2em 0;
+    border: solid 1px var(--color-line);
+  }
+  th {
+    background: var(--color-highlight);
+    color: var(--color-base);
+  }
+  th, td {
+    padding: .2em 1em;
+    border-top: solid 1px var(--color-line);
+    border-bottom: solid 1px var(--color-line);
+  }
+
   & img {
     max-width: 100%;
   }
