--- a/src/variables.css
+++ b/src/variables.css
@@ -28,15 +28,22 @@
   --code-background-selection: #b3d4fc;
 
   /* Fonts */
-  --font-family-code: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
+  --font-family-code:
+    Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console",
+    "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono",
+    "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
   --font-family-ui: -apple-system, system-ui, sans-serif;
   --font-family-display: var(--font-family-ui);
   --font-bold: 600;
 
-  --font-code: .9em/1.5 var(--font-family-code);
-  --font-display: var(--font-bold) clamp(2rem, 10vw, 4rem)/1 var(--font-family-display);
+  --font-code: 0.9em/1.5 var(--font-family-code);
+  --font-display: var(--font-bold) clamp(2rem, 10vw, 4rem)/1 var(
+    --font-family-display
+  );
   --font-display-spacing: -0.02em;
-  --font-title: var(--font-bold) clamp(1.5rem, 8vw, 2rem)/1.2 var(--font-family-ui);
+  --font-title: var(--font-bold) clamp(1.5rem, 8vw, 2rem)/1.2 var(
+    --font-family-ui
+  );
   --font-title-spacing: -0.015em;
   --font-body: clamp(1rem, 5vw, 1.125rem)/1.6 var(--font-family-ui);
   --font-body-bold: var(--font-bold) var(--font-body);
@@ -56,7 +63,7 @@
   --animation-duration: 0.2s;
 
   /* Pagefind */
-  --pagefind-ui-scale: .8;
+  --pagefind-ui-scale: 0.8;
   --pagefind-ui-primary: var(--color-text);
   --pagefind-ui-text: var(--color-text);
   --pagefind-ui-background: var(--color-highlight);
@@ -75,7 +82,7 @@
   --color-base: hsl(220, 20%, 100%);
   --color-text: hsl(220, 20%, 70%);
   --color-dim: hsl(220, 20%, 55%);
-  
+
   --color-line: hsl(220, 20%, 20%);
   --color-background: hsl(220, 20%, 10%);
   --color-highlight: hsl(220, 20%, 13%);
@@ -93,5 +100,5 @@
   --code-deleted: hsl(15, 60%, 55%);
   --code-border: var(--color-line);
   --code-background: var(--color-highlight);
-  --code-background-selection: hsla(0,0%,93%,0.15);
+  --code-background-selection: hsla(0, 0%, 93%, 0.15);
 }
