--- a/src/components/accordion.css
+++ b/src/components/accordion.css
@@ -9,9 +9,9 @@ summary {
   --marker-image: url('data:image/svg+xml;charset=UTF-8,<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="m8 9.586 5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 9.586Z" /></svg>');
 
   display: flex;
-  column-gap: .5em;
+  column-gap: 0.5em;
   align-items: center;
-  padding: .6em;
+  padding: 0.6em;
   min-height: 2.5em;
   text-decoration: none;
   color: inherit;
@@ -25,7 +25,7 @@ summary {
   }
 
   &::before {
-    content: '';
+    content: "";
     display: block;
     mask: var(--marker-image) center center / 100% 100% no-repeat;
     -webkit-mask: var(--marker-image) center center / 100% 100% no-repeat;
