--- a/src/components/blockquote.css
+++ b/src/components/blockquote.css
@@ -1,6 +1,6 @@
 blockquote {
   margin: 1.5em 0;
-  padding-block: .75em;
+  padding-block: 0.75em;
   padding-inline: 1.5em;
   background-color: var(--color-highlight);
   border-left: solid 4px var(--color-line);
