--- a/src/components/breadcrumb.css
+++ b/src/components/breadcrumb.css
@@ -9,7 +9,7 @@
   & > li::after {
     content: "/";
     display: inline-block;
-    padding: 0 .5em;
+    padding: 0 0.5em;
   }
   & a {
     text-decoration: none;
