--- a/src/components/code.css
+++ b/src/components/code.css
@@ -12,26 +12,26 @@ pre[class*="language-"] {
   hyphens: none;
 
   &::selection,
-  & ::selection{
+  & ::selection {
     background: var(--code-background-selection);
   }
 }
 pre[class*="language-"] {
   background: var(--code-background);
   border: 1px solid var(--code-border);
-  margin: .5em 0;
+  margin: 0.5em 0;
   overflow: auto;
   padding: 1em;
 }
 
-:not(pre)>code[class*="language-"] {
+:not(pre) > code[class*="language-"] {
   background: var(--code-background);
   border: 1px solid var(--code-border);
-  padding: .15em .2em .05em
+  padding: 0.15em 0.2em 0.05em;
 }
 .token.punctuation,
 .namespace {
-  opacity: .7
+  opacity: 0.7;
 }
 .token {
   position: relative;
@@ -39,13 +39,13 @@ pre[class*="language-"] {
 
   &.important,
   &.bold {
-    font-weight: bold
+    font-weight: bold;
   }
   &.italic {
-    font-style: italic
+    font-style: italic;
   }
   &.entity {
-    cursor: help
+    cursor: help;
   }
   &.comment,
   &.prolog,
