--- a/src/components/toc.css
+++ b/src/components/toc.css
@@ -5,7 +5,7 @@
   & h2 {
     font: var(--font-small-bold);
     text-transform: uppercase;
-    margin: .5em 0;
+    margin: 0.5em 0;
   }
 
   & ol {
@@ -19,7 +19,7 @@
   }
 
   & li {
-    margin: .1em 0;
+    margin: 0.1em 0;
   }
 
   & a {
