moved some styles from ui-normalize to reset

--- a/src/reset.css
+++ b/src/reset.css
@@ -1,9 +1,18 @@
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
+
 html {
   scroll-padding-top: 120px;
   scroll-behavior: smooth;
   text-rendering: auto;
+  overflow-wrap: break-word;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  tab-size: 4;
 }
 
 html,
@@ -12,6 +21,18 @@ body {
   color: var(--color-base);
   background-color: var(--color-background);
   overflow-wrap: break-word;
+  margin: 0;
+}
+
+:focus {
+  z-index: 1;
+}
+
+:focus-visible {
+  outline-width: 1px;
+  outline-offset: 2px;
+  outline-style: solid;
+  outline-color: currentColor;
 }
 
 main {
@@ -31,6 +52,7 @@ a {
 
 table {
   margin: 1em 0;
+  border-color: currentcolor;
 
   & td,
   & th {
@@ -38,6 +60,8 @@ table {
   }
 }
 
+samp,
+kbd,
 pre,
 code {
   font: var(--font-code);
@@ -47,6 +71,10 @@ code {
 
 pre {
   overflow-x: auto;
+}
+
+small {
+  font-size: 80%;
 }
 
 :not(pre) > code {
@@ -80,4 +108,64 @@ hr {
 h1, h2, h3, h4, h5, h6, strong, b {
   font-weight: var(--font-bold);
   color: var(--color-text);
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+[type="search"] {
+  -webkit-appearance: textfield;
+}
+::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+legend {
+  padding: 0;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+  height: auto;
+}
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+summary {
+  display: list-item;
 }
